# clinicaltrial-match

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  railway.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  pages.yml
clinicaltrial_match/: __init__.py  __main__.py  config.py
clinicaltrial_match/api/: app.py  middleware.py  models.py  mpp_payment.py
clinicaltrial_match/api/routes/: health.py  matching.py  patients.py  trials.py
clinicaltrial_match/data/: seed_trials.json
clinicaltrial_match/infrastructure/: claude_client.py  db.py  embeddings.py
clinicaltrial_match/matching/: constraints.py  engine.py  models.py  ranker.py  semantic.py
clinicaltrial_match/patients/: fhir_parser.py  models.py  note_extractor.py  repository.py
clinicaltrial_match/static/: index.html
clinicaltrial_match/trials/: fetcher.py  models.py  parser.py  repository.py
docker/: Dockerfile  docker-compose.yml
docs/: index.html
tests/: conftest.py
tests/api/: test_matching_routes.py
tests/fixtures/: sample_criteria.py  sample_fhir.py  sample_trials.py
tests/matching/: test_constraints.py  test_engine.py  test_ranker.py
tests/patients/: test_fhir_parser.py  test_note_extractor.py  test_repository.py
tests/trials/: test_fetcher.py  test_parser.py  test_repository.py
