[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clinicaltrial-match"
version = "0.1.0"
description = "AI-powered clinical trial matching from patient records"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Nithin Sarva", email = "sarvanithin@gmail.com" }]
keywords = ["clinical-trials", "nlp", "fhir", "healthcare", "matching", "eligibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "fastapi>=0.111.0,<0.120",
    "uvicorn[standard]>=0.29.0,<0.35",
    "httpx>=0.27.0,<0.29",
    "pydantic>=2.7.0,<3.0",
    "pydantic-settings>=2.3.0,<3.0",
    "anthropic>=0.34.0",
    "sentence-transformers>=2.5.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "structlog>=24.1.0",
    "tenacity>=8.3.0,<9.0",
    "diskcache>=5.6.0",
    "anyio>=4.4.0",
    "rich>=13.7.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.7.0,<4.0",
]
faiss = [
    "faiss-cpu>=1.7.0",
]
mpp = [
    "pympp[tempo]>=0.1.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "coverage>=7.5.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
all = ["clinicaltrial-match[nlp,faiss]"]

[project.scripts]
ctm = "clinicaltrial_match.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["clinicaltrial_match"]

[tool.ruff]
line-length = 130
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501", "F841", "E741"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: hits real external APIs (deselect with '-m not integration')",
]
